# requests-stats

./: .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  pyproject.toml
.github/workflows/: test.yml
src/requests_stats/: cli.py
src/requests_stats/adapters/: playwright.py  requests.py
src/requests_stats/core/: base_storage.py  coverage.py  recording.py
src/requests_stats/openapi/: coverage.py  html_reporter.py  terminal_reporter.py
src/requests_stats/openapi/templates/: html_report.html.j2
src/requests_stats/reporters/coverage/: html_reporter.py  terminal_reporter.py
src/requests_stats/storage/: har_storage.py  in_memory_storage.py  sqlite_storage.py
tests/: test_adapter.py
tests/adapters/: test_playwright.py
tests/integration/: test_petstore_html_report.py
tests/integration/adapters/: conftest.py  petstore_terminal_report.txt  test_playwright_petstore.py  test_requests2.py  test_requests_petstore.py
tests/integration/fixtures/: petstore_html_report.html
tests/openapi/coverage/: test_coverage_normalization.py  test_petstore_terminal_report.py  test_terminal_reporter.py
tests/playground/: test_playwright.py
tests/unit/core/coverage/: test_coverage_normalization.py
