[project]
name = "requests-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Andreas Finkler", email = "andi.finkler@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["requests>=2.32.5"]

[project.optional-dependencies]
openapi = ["openapi3-parser>=1.1.21"]
cli = [
    "typer>=0.19.2",
]

[project.scripts]
requests-stats = "requests_stats.cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-httpserver>=1.1.3",
  "pytest-pretty>=1.3.0",
  "ruff>=0.13.1",
  "testcontainers>=4.10.0",
  "types-requests>=2.32.4.20250913",
]
